--- a/Day1/index.html
+++ b/Day1/index.html
@@ -11,5 +11,6 @@
     <h3>Official Email: ychoudhary@ingenuitygaming.com</h3>
     <h3>Company Name: Ingenuity Gaming</h3>
     <h3>Company Address:1st Floor, 14, Shaheed Captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh 201301</h3>
+    <a href="C:\Users\ychoudhary\Desktop\IngenuityGaming1\Day 2\Assignment2.html"></a>
 </body>
 </html>
