--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Assignment2.html">For Assignment2 click here: </a>
+    <a href="Day 2\Assignment2.html">For Assignment2 click here: </a>
 </body>
 </html>
