--- a/Day 2/Assignment3.html
+++ b/Day 2/Assignment3.html
@@ -3,13 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=""stylesheet href="Assignment3.css">
-    <title>Document</title>
+    <meta name="viewport" initial-scale=1.0">
+    <link rel="stylesheet" href="Assignment3.css">
+    <title>ASSIGNMENT-3</title>
 </head>
 <body>
-    <div class="bg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam neque cum eius ducimus, ad vitae ut. Voluptas vitae eligendi repellat hic dolores laboriosam error cupiditate, nemo ratione cum nostrum nesciunt.
-      <button>Google</button>
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>Music the best healer</h1>
+      <p>Life is like a beautiful melody, only the lyrics are messed up.</p>
+      <a class="button1" href="https://open.spotify.com/">Spotify</a>
+    </div>
+  </div>
+    <div>
+        <p class="first">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum animi culpa, facere aut, aperiam deleniti 
+            perferendis debitis impedit unde eos quas corrupti deserunt dolore aliquam optio. Placeat dolores,
+             asperiores iusto alias, nulla quae libero dolorum nemo nobis vel ducimus enim et similique sapiente.
+              Enim modi debitis, ut, provident quasi fuga iste dolores odio temporibus sequi at magni unde maxime
+               vel atque rerum dolor ratione! Pariatur cumque nemo ad illo? Enim pariatur tenetur at magni quia 
+             optio eligendi doloremque maxime in fugit debitis commodi neque dolorem! Deleniti, a fuga.
+        </p>
+        <p class="second">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum animi culpa, facere aut, aperiam deleniti 
+            perferendis debitis impedit unde eos quas corrupti deserunt dolore aliquam optio. Placeat dolores,
+             asperiores iusto alias, nulla quae libero dolorum nemo nobis vel ducimus enim et similique sapiente.
+              Enim modi debitis, ut, provident quasi fuga iste dolores odio temporibus sequi at magni unde maxime
+               vel atque rerum dolor ratione! Pariatur cumque nemo ad illo? Enim pariatur tenetur at magni quia 
+             optio eligendi doloremque maxime in fugit debitis commodi neque dolorem! Deleniti, a fuga.
+        </p>
+    </div>
+    <div class="hello">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Tempore provident ad nostrum, nobis laboriosam repudiandae.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, deserunt?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, accusamus!
+        </p>
+    </div>
+    <div class="hello2">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Tempore provident ad nostrum, nobis laboriosam repudiandae.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, deserunt?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, accusamus!
+        </p>
+    </div>
+    <div class="hello3">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Tempore provident ad nostrum, nobis laboriosam repudiandae.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, deserunt?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti, accusamus!
+        </p>
     </div>
 </body>
 </html>
