--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="Day 2\Assignment2.html">For Assignment2 click here: </a>
+    <a href="Day 2\Assignment3.html">For Assignment3 click here: </a>
 </body>
 </html>
