--- a/Day 3/Photgraphy.html
+++ b/Day 3/Photgraphy.html
@@ -10,17 +10,18 @@
 </head>
 <body>
     <div class="container">
-        <nav>
+        <nav id>
             <a href="#About"><h3>About</h3></a>
             <a href="#Cameras"><h3>Cameras</h3></a>
             <a href="#Components"><h3>Components</h3></a>
             <a href="#TopPhoto"><h3>Top Photographers</h3></a>
-            <a href="#Sources"><h3>Sources and References</h3></a>
+            <a href="#footer"><h3>Sources and References</h3></a>
         </nav>
-        <header>
+        <header id="T">
             <h1>PHOTOGRAPHY</h1>
             <h6 style="font-family: 'Charm', cursive;">In the world of photography, you get to share a captured moment with other people..!!</h6>
         </header>
+        <a href="#T"><img src="https://icons.veryicon.com/png/o/miscellaneous/small-face-icon/upper-27.png" id="fixedbutton" title="Back to Top" ></a>
         <section id="About">
             <h1 style="font-size: 50px;">ABOUT PHOTOGRAPHY</h1>
             <div class="information">
@@ -117,9 +118,30 @@
                 </div>
             </div>
         </section>
-        <footer>
-            
+    <footer id="footer">    
+        <h1>Famous Camera Brands</h1>
+            <div class="copyright">
+                <a href="https://www.nikon.co.in/" target="_blank">Nikon</a>
+                <a href="https://in.canon/" target="_blank">Canon</a>
+                <a href="https://www.sony.co.in/" target="_blank">Sony</a>
+                <a href="https://www.samsung.com/us/support/camera/digital-camera/" target="_blank">Samsung</a>
+                <a href="https://www.kodak.com/en/consumer/products/cameras" target="_blank">Kodak</a>
+                <a href="https://fujifilmxindia.com/?gclid=CjwKCAjw3K2XBhAzEiwAmmgrAr-PJz7xe3tDuZqn3HnAE7Rf2i7RiBY3BPrbQ4PiTNArNEFgcLimKBoCS3MQAvD_BwE" target="_blank">Fujifilm</a>
+                <a href="https://www.panasonic.com/in/consumer/cameras-camcorders/camera.html" target="_blank">Panasonic</a>
+            </div>
+            <h1>References</h1>
+            <div class="copyright">
+                <a href="https://en.wikipedia.org/wiki/Photography" target="_blank">Wikipedia Page about Photography</a>
+                <a href="https://en.wikipedia.org/wiki/Camera" target="_blank">Wikipedia Page about Cameras</a>
+            </div>
+            <h1>Shopping</h1>
+            <div class="copyright">
+                <a href="https://www.amazon.in/s?k=DSLR&crid=EEOJ3AVPXQ12&sprefix=dsl%2Caps%2C218&ref=nb_sb_noss_2" target="_blank">Buy Cameras</a>
+                <a href="https://www.amazon.in/s?k=camera+accessories&sprefix=camera+acc%2Caps%2C215&ref=nb_sb_ss_ts-doa-p_1_10" target="_blank">Buy Accesories</a>
+            </div>
+            <hr>
+                <p style="color: white; font-size: 17px; padding: 10px; text-align: center;">Copyright @ 2022 All Right Reserved by Yukti Choudhary.</p>
+            <hr>
         </footer>
-    </div>
-</body>
+    </body>
 </html>
