--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Day 2\Assignment2.html">For Assignment2 click here: </a>
-    <a href="Day 2\Assignment3.html">For Assignment3 click here: </a>
+    <a href="Day 2\Assignment2.html">For Assignment2 click here: </a><br><hr>
+    <a href="Day 2\Assignment3.html">For Assignment3 click here: </a><br><hr>
+    <a href="Day 3\Photgraphy.html">For Assignment4 click here: </a><br><hr>
 </body>
 </html>
