--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Name: Yukti Choudhary</h1>
+    <h1>Company name: Ingenuity Gaming</h1>
+    <h1>Company Address: Ingenuity gaming,F-14, Shaheed captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh</h1>
+    <h1>Official Email Address: ychoudhary@ingenuitygaming.com</h1>
     <a href="Day 2\Assignment2.html">For Assignment2 click here: </a><br><hr>
     <a href="Day 2\Assignment3.html">For Assignment3 click here: </a><br><hr>
     <a href="Day 3\Photgraphy.html">For Assignment4 click here: </a><br><hr>
