--- a/Day 2/Assignment3.html
+++ b/Day 2/Assignment3.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" initial-scale=1.0">
     <link rel="stylesheet" href="Assignment3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Charm&family=Cookie&family=Courgette&family=Great+Vibes&family=Markazi+Text&family=Patrick+Hand&family=Tapestry&display=swap" rel="stylesheet">
     <title>ASSIGNMENT-3</title>
 </head>
 <body>
   <div class="hero-image">
     <div class="hero-text">
-      <h1>Music the best healer</h1>
+      <h1 style="font-family: 'Charm', cursive; font-size:100px">Music the best healer</h1>
       <p>Life is like a beautiful melody, only the lyrics are messed up.</p>
       <a class="button1" href="https://open.spotify.com/">Spotify</a>
     </div>
