--- a/index.html
+++ b/index.html
@@ -5,14 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+            align-items: center;
+            text-align: center;
+            font-size: 20px;
+            color: aliceblue;
+        }
+        a:hover{
+            text-shadow: 2px 2px 1px whitesmoke;
+        }
+        a{
+            color: rebeccapurple;
+            font-size: 50px;
+        }
+    </style>
 </head>
 <body>
+    <h2>Assignment 1: Make your First Web Page Live.
+
+
+        Instruction:
+        - Page should container Your Name, Your Official Email and Your Company Name with Full Address. </h2>
     <h1>Name: Yukti Choudhary</h1>
     <h1>Company name: Ingenuity Gaming</h1>
     <h1>Company Address: Ingenuity gaming,F-14, Shaheed captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh</h1>
-    <h1>Official Email Address: ychoudhary@ingenuitygaming.com</h1>
-    <a href="Day 2\Assignment2.html">For Assignment2 click here: </a><br><hr>
-    <a href="Day 2\Assignment3.html">For Assignment3 click here: </a><br><hr>
-    <a href="Day 3\Photgraphy.html">For Assignment4 click here: </a><br><hr>
+    <h1>Official Email Address: ychoudhary@ingenuitygaming.com</h1><br><hr>
+    <a href="Day 2\Assignment2.html">Create a Tribute page with HTML Elements and style with CSS Properties. </a><br><hr>
+    <a href="Day 2\Assignment3.html">Create a Landing page with HTML Elements and style with CSS Properties. </a><br><hr>
+    <a href="Day 3\Photgraphy.html">Create a Single Page website with following Template.</a><br><hr>
 </body>
 </html>
