--- a/Day 5/Assignment-5.html
+++ b/Day 5/Assignment-5.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="sky">
-        <div class="highway"></div>
+        <div class="highway">
+            <img src="https://lh3.googleusercontent.com/dyNM-74ST7OOKQdWWp5Zit7aS0e9fVSrx5dNQUzi4f6Xkk_lJVK5OAgJzb2rU-ruFU4WmaheFGaS7Xg=w1920-h1007">
+        </div>
         <div class="car">
             <img src="https://i.postimg.cc/2SVfHC8d/car.png">
         </div>
