--- a/Day 5/Assignment-5.html
+++ b/Day 5/Assignment-5.html
@@ -9,12 +9,9 @@
 </head>
 <body>
     <div class="sky">
-        <div class="highway">
-            <img src="https://lh3.googleusercontent.com/dyNM-74ST7OOKQdWWp5Zit7aS0e9fVSrx5dNQUzi4f6Xkk_lJVK5OAgJzb2rU-ruFU4WmaheFGaS7Xg=w1920-h1007">
-        </div>
-        <div class="car">
-            <img src="https://i.postimg.cc/2SVfHC8d/car.png">
-        </div>
+        <div class="city"><img src="https://images8.alphacoders.com/921/921329.jpg"></div>
+        <div class="highway"></div>
+        <div class="car"><img src="https://i.postimg.cc/2SVfHC8d/car.png"></div>
         <div class="wheels">
             <img src="https://i.pinimg.com/originals/37/a3/52/37a3527ddff605ec10802826f81c4474.png" id="front">
             <img src="https://i.pinimg.com/originals/37/a3/52/37a3527ddff605ec10802826f81c4474.png" id="back">
