--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
     </style>
 </head>
 <body>
-    <h2>Assignment 1: Make your First Web Page Live.
-
-
-        Instruction:
-        - Page should container Your Name, Your Official Email and Your Company Name with Full Address. </h2>
+    <marquee><h1 style="color: green;">Yukti's Assignments</h1></marquee>
+    <h2>Assignment 1: Make your First Web Page Live. Instruction:- Page should container Your Name, Your Official Email and Your Company Name with Full Address. </h2>
     <h1>Name: Yukti Choudhary</h1>
     <h1>Company name: Ingenuity Gaming</h1>
     <h1>Company Address: Ingenuity gaming,F-14, Shaheed captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh</h1>
