--- a/Day 3/Photgraphy.html
+++ b/Day 3/Photgraphy.html
@@ -32,28 +32,28 @@
             <h2>Types of Cameras</h2>
             <div class="cardContainer">
                 <div id="card">
-                    <img src="https://imaging.nikon.com/lineup/coolpix/img/product_a1000.png" width="300" height="250" title="Compact Camera" style="border: 2px solid white; padding: 10px; border-radius: 20px;">
+                    <div id="cardImg"><img src="https://imaging.nikon.com/lineup/coolpix/img/product_a1000.png" width="300" height="250" title="Compact Camera" style="border: 2px solid white; padding: 10px; border-radius: 20px;"></div>
                     <div id="caption">
                         <h3>Compact Camera</h3>
                         Compact cameras are small and designed to he easy to use. This type of camera is often called a point-and-shoot camera because they are so quick and easy to take photos with.
                     </div>
                 </div>
                 <div id="card">
-                    <img src="https://cdn-4.nikon-cdn.com/e/Q5NM96RZZo-YRYNeYvAi9aeqFMY3fvEkMLBPAiSy_A1YxDQC1nt0AxsXFY4Tbohghb9RTxCkNNpN6WRNr0eZgh7sHIYijGuKH3Ht6-kSXDA=/Views/353_26528_B600_left.png" width="300" height="250" title="Bridge Cameras" style="border: 2px solid white; padding: 10px; border-radius: 20px;">
-                    <div id="caption">
+                    <div id="cardImg"><img src="https://cdn-4.nikon-cdn.com/e/Q5NM96RZZo-YRYNeYvAi9aeqFMY3fvEkMLBPAiSy_A1YxDQC1nt0AxsXFY4Tbohghb9RTxCkNNpN6WRNr0eZgh7sHIYijGuKH3Ht6-kSXDA=/Views/353_26528_B600_left.png" width="300" height="250" title="Bridge Cameras" style="border: 2px solid white; padding: 10px; border-radius: 20px;"></div>                    
+                        <div id="caption">
                         <h3>Bridge Cameras</h3>
                         A bridge camera is a type of camera many people choose when they get more serious about photography. You may have discovered you love taking pictures. Is using your phone or compact camera limiting? Bridge cameras are far more capable and without the limitations of smaller cameras
                     </div>
                 </div>
                 <div id="card">
-                    <img src="https://cdn-7.nikon-cdn.com/Images/CPCAssets/pdp/zfc/img/cam-front-view.png" width="300" height="250" title="Mirrorless Cameras" style="border: 2px solid white; padding: 10px; border-radius: 20px;">
+                    <div id="cardImg"><img src="https://cdn-7.nikon-cdn.com/Images/CPCAssets/pdp/zfc/img/cam-front-view.png" width="300" height="250" title="Mirrorless Cameras" style="border: 2px solid white; padding: 10px; border-radius: 20px;"></div>
                     <div id="caption">
                         <h3>Mirrorless Cameras</h3>
                         Digital mirrorless cameras, as the name suggests, have no mirror. What you see when you look through the viewfinder is an small electronic screen. This displays what you are pointing your lens at.
                     </div>
                 </div>
                 <div id="card">
-                    <img src="https://cdn-4.nikon-cdn.com/e/Q5NM96RZZo-YRYNeYvAi9beHK4x3L-wmtXfawgokSdJtu7dDU0VkoA==/Views/353_1624_D6_left.png" width="300" height="250" title="DSLR Cameras" style="border: 2px solid white; padding: 10px; border-radius: 20px;">
+                    <div id="cardImg"><img src="https://cdn-4.nikon-cdn.com/e/Q5NM96RZZo-YRYNeYvAi9beHK4x3L-wmtXfawgokSdJtu7dDU0VkoA==/Views/353_1624_D6_left.png" width="300" height="250" title="DSLR Cameras" style="border: 2px solid white; padding: 10px; border-radius: 20px;"></div>
                     <div id="caption">
                         <h3>DSLR Cameras</h3>
                         DSLR stands for “Digital Single Lens Reflex”. If you’re looking to take your photography to a more professional level, consider getting a DSLR camera. They have been the go to camera for many professionals in the digital age.
