--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
     <a href="Day 3\Photgraphy.html">Create a Single Page website with following Template.</a><br><hr>
     <a href="Day 5\Assignment-5.html">Create a Car Animation (or Use your own creativity).</a><br><hr>
     <a href="Day6\Javascript.html">Perform Javascript Assignments</a><br><hr>
+    <a href="Day7\sum.html">sum of numbers</a><br><hr>
+    <a href="Day7\information.html">Information about user</a><br><hr>
+    <a href="Day7\Guess.html">Guess the number</a><br><hr>
 </body>
 </html>
