--- a/Day7/information.html
+++ b/Day7/information.html
@@ -7,6 +7,7 @@
     <title>Information</title>
 </head>
 <body>
+    <h1>HIT CTRL+SHIFT+J for output</h1>
     <script src="information.js"></script>
 </body>
 </html>
