--- a/index.html
+++ b/index.html
@@ -37,5 +37,10 @@
     <a href="Day7\sum.html">sum of numbers</a><br><hr>
     <a href="Day7\information.html">Information About Me</a><br><hr>
     <a href="Day7\Guess.html">Guess the number</a><br><hr>
+    <a href="Day-8\Assignment-1.html">Write code to remove extra white space in between the string</a><br><hr>
+    <a href="Day-8\Assignment-2.html">Write a code to Copy an array into another using forEach()</a><br><hr>
+    <a href="Day-8\Assignment-3.html">Write a code in JavaScript to Check all Students passed  (not passing elements one by one to function)</a><br><hr>
+    <a href="Day-8\Assignment-4.html">Write a code to add an Element at a particular List inside an array</a><br><hr>
+    <a href="Day-8\Assignment-5.html">Write a code to sort the string in descending order.</a><br><hr>
 </body>
 </html>
