--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </style>
 </head>
 <body>
-    <marquee><h1 style="color: green;">Yukti's Assignments</h1></marquee>
+    <marquee><h1 style="color: green;">Yukti's Assignments</h1>
+    <br>
+    <h3><a href="https://github.com/Yukti-04/IngenuityGaming1" target="_blank">My Github repository link</a></h3></marquee>
     <h2>Assignment 1: Make your First Web Page Live. Instruction:- Page should container Your Name, Your Official Email and Your Company Name with Full Address. </h2>
     <h1>Name: Yukti Choudhary</h1>
     <h1>Company name: Ingenuity Gaming</h1>
