--- a/Day-8/Assignment-5.html
+++ b/Day-8/Assignment-5.html
@@ -16,10 +16,11 @@
 <body>
     <h1 style="text-align: center; color: red;">Question : Write a code to sort the string in descending order.</h1>
         <script>
-        var a=["Hello","how","are","you"];
-        document.write('<h1 style="text-align: center; color: green; font-size: 50px; font-weight: bold;">Original Array: ' + a+' </h1>');
-        a.reverse();
-        document.write('<h1 style="text-align: center; color: yellow; font-size: 50px; font-weight: bold;">New Array sorted in reversed order is: ' + a+' </h1>');
-    </script>
+            var a=["Hello","how","are","you"];
+            document.write('<h1 style="text-align: center; color: green; font-size: 50px; font-weight: bold;">Original Array: ' + a+' </h1>');
+            a.sort();
+            a.reverse();
+            document.write('<h1 style="text-align: center; color: yellow; font-size: 50px; font-weight: bold;">New Array sorted in reversed order is: ' + a+' </h1>');
+        </script>
 </body>
 </html>
