--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@
     <a href="Day-9(Functions)\Assignment-3.html">Write a code to return entire function definition and display it.</a><br><hr>
     <a href="Day-9(Functions)\Assignment-4.html">Write a JavaScript program to create a new string adding "New!" in front of a given String. If the given string begins with "New!" already then return the original string. (Use Functional Approach)</a><br><hr>
     <a href="Day-9(Functions)\Assignment-5.html"> Write a JavaScript program to create a new string from a given string taking first 3 characters and the last 3 characters of a string and add them together. The string length must be 3 or more. If not, return the original string is returned.  (Use Functional Approach)</a><br><hr>
+    <a href="Day-10\Assignment-1.html"> Write a Program to use call() and apply() Method.</a><br><hr>
+    <a href="Day-10\Assignment-2.html"> Write a Program to create an array having cube root of every element of another array.</a><br><hr>
+    <a href="Day-10\Assignment-3.html"> Write a Program to call a function in an interval of 3 sec for 5 times. (Use Functional Approach)</a><br><hr>
+    <a href="Day-10\Assignment-4.html">Write a Program to iterate an Array of Objects using map function.</a><br><hr>
+    <a href="Day-10\Assignment-5.html"> Write a Program to Filter out people whose age is less than 25 in descending order.    (Use Functional Approach)</a><br><hr>
+
 </body>
 </html>
