--- a/Day 2/Assignment3.html
+++ b/Day 2/Assignment3.html
@@ -13,7 +13,7 @@
     <div class="hero-text">
       <h1 style="font-family: 'Charm', cursive; font-size:100px">Music the best healer</h1>
       <p>Life is like a beautiful melody, only the lyrics are messed up.</p>
-      <a class="button1" href="https://open.spotify.com/">Spotify</a>
+      <a class="button1" href="https://open.spotify.com/" target="_blank">Spotify</a>
     </div>
   </div>
     <div>
