--- a/Day13/BOM.html
+++ b/Day13/BOM.html
@@ -10,7 +10,7 @@
     <button id="btn" onclick="openWindow()">OPEN WINDOW</button>
     <script>
         function openWindow() {
-            var url="../Day12//todo.html";
+            var url="form.html";
             var windowSize="height=500px,width=500px";
             window.open(url,"About",windowSize);
         }
