--- a/Day13/form.html
+++ b/Day13/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Itim&family=Kalam:wght@700&family=Rock+Salt&family=Satisfy&display=swap" rel="stylesheet">
     <style>
         body{
             background-image: url("https://wallpaperaccess.com/full/3124512.jpg");
@@ -22,24 +22,64 @@
           padding-left: 20px;
           padding-bottom: 20px;
           height: 875px;
+          color: white
         }
         h1{
             text-align: center;
             font-family: 'Kalam', cursive;
             font-size: 50px;
-            color: black;
+            color: white;
             text-transform: uppercase;
         }
         h3{
             text-align: center;
-            margin-top: 10px;
+            padding-top: 10px;
+            font-family: 'Satisfy',cursive;
+            font-size: 50px;
+            color: ivory;
+            text-shadow: 10px 10px 10px black;
         }
         #container{
             width: 50%;
             margin: auto;
             padding-top:10px ;
-            background-color: rgba(0, 0, 0, 0.075);
+            background-color: rgba(0, 0, 0, 0.774);
             padding-bottom: 50px;
+        }
+        form{
+            font-size: 30px;
+            padding: 10px;
+            font-family: 'Sriracha',cursive;
+            text-align: center;
+        }
+        input[type=text], input[type=number], input[type=email]{
+        text-align: center;
+        }
+        textarea,textarea::placeholder{
+            text-align: center;
+            width: 100%;
+            background-color: rgba(0, 255, 255, 0);
+            padding: 2%;
+            font-size: 20px;
+            color: white;
+            height: auto;
+            font-family: 'Itim', cursive;
+            overflow: hidden;
+            margin: 10px 0px; 
+        }
+        .feel{
+            text-align: center;
+            padding: 10px 10px;
+        }
+        input[type=submit]{
+            width: 30%;
+            height: auto;
+            margin: auto;
+            font-size: 30px;
+            font-family: 'Rock Salt', cursive;
+            border-radius: 50%;
+            /* padding:1%; */
+            margin-top: 10px;
         }
     </style>
     <title>Form</title>
@@ -48,7 +88,7 @@
     <div id="container">
         <h1>Contact Form</h1>
         <div id="form">
-            <h3>Tell us something about You.</h3>
+            <h3>Tell us something about You</h3>
             <form>
                 <label for="Name">Name: </label>
                 <input type="text" name="name" id="name" placeholder="Enter your name"><br>
@@ -64,16 +104,16 @@
                     <option value="School">
                     <option value="Others">
                 </datalist><br>
-                <label for="time">What's the best time to contact you: </label><br>
-                <input type="radio" id="time" name="morning">Morning<br>
-                <input type="radio" id="time" name="afternoon"> Afternoon<br>
-                <input type="radio" id="time" name="evening"> Evening<br>
-                <input type="radio" id="time" name="night"> Night<br>
-                <label for="feel">How do you do(check all if you are confused): </label><br>
-                <input type="checkbox" id="feel" name="Happy">Happy<br>
-                <input type="checkbox" id="feel" name="Sad">Sad<br>
-                <input type="checkbox" id="feel" name="Cheerful">Cheerful<br>
-                <input type="checkbox" id="feel" name="Frustated">Frustated<br>
+                <label for="time">What's the best time to contact you: </label>
+                <p class="feel"><input type="radio" id="time" name="morning">Morning
+                <input type="radio" id="time" name="afternoon"> Afternoon
+                <input type="radio" id="time" name="evening"> Evening
+                <input type="radio" id="time" name="night"> Night</p>
+                <label for="feel" class="f">How do you do(check all if you are confused): </label>
+                <p class="feel"><input type="checkbox" id="feel" name="Happy">Happy
+                <input type="checkbox" id="feel" name="Sad">Sad
+                <input type="checkbox" id="feel" name="Cheerful">Cheerful
+                <input type="checkbox" id="feel" name="Frustated">Frustated</p>
                 <label for="write">Write about what you liked and what you dislike: </label><br>
                 <textarea id="write" name="write" placeholder="Write here"></textarea><br>
                 <input type="submit">
