--- a/Day-8/Assignment-4.html
+++ b/Day-8/Assignment-4.html
@@ -17,11 +17,11 @@
 <body>
     <h1 style="text-align: center; color: red;">Question : Write a code to add an Element at a particular List inside an array</h1>
     <script>
-        var a=[1,2,3,4,["Hello","World"],[true,false]];
+        ;var a=[1,2,3,4,["Hello","World"],[true,false]];
         document.write('<h1 style="text-align: center; color: green; font-size: 50px; font-weight: bold;">Original Array:' + a+' </h1>');
         a[4][2]="How are you";
         a[5][2]=[1,2,["Hello"]];
-        document.write('<h1 style="text-align: center; color: yellow; font-size: 50px; font-weight: bold;">New Array:' + a+' </h1>');
+        document.write('<h1 style="text-align: center; color: yellow; font-size: 50px; font-weight: bold;">New Array:' + a+' </h1>')
     </script>
 </body>
 </html>
