--- a/Day12/todo.html
+++ b/Day12/todo.html
@@ -26,3 +26,5 @@
     <script src="todo.js"></script>
   </body>
 </html>
+<!-- arrow function ki this se koi binding nhi hoti woh uske parent ko  -->
+<!-- arrow functions me duplicate parameters passed kar -->
