--- a/Day-9(Functions)/Assignment-5.html
+++ b/Day-9(Functions)/Assignment-5.html
@@ -18,6 +18,7 @@
 <body>
     <h1 style="text-align: center; color: white; font-size: 50px; font-weight: bold">Write a JavaScript program to create a new string from a given string taking first 3 characters and the last 3 characters of a string and add them together. The string length must be 3 or more. If not, return the original string is returned.  (Use Functional Approach)</h1><br>
     <script>
+        let alpha=prompt("Enter")
         function display(alpha){     
             var a=alpha; 
             if(alpha.length <= 3)
@@ -30,7 +31,7 @@
                 return "String is: " + a+ " String length is: "+alpha.length+" which is greater than so the result is: "+(front+back)+" start three characters: "+front+" and last three characters are: "+back;
             }
         }
-        document.write('<h2 style="color: greenyellow;"> '+display("HelloWorld123")+'</h2>');
+        document.write('<h2 style="color: greenyellow;"> '+display(alpha)+'</h2>');
         document.write('<h2 style="color: greenyellow;">'+display("age")+'</h2>');
     </script>
 </body>
