--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <a href="Day-10\Assignment-5.html"> Write a Program to Filter out people whose age is less than 25 in descending order.    (Use Functional Approach)</a><br><hr>
     <a href="Day-11\WhakeAMole.html"> Write JavaScript code to make Game in working Condition. </a><br><hr>
     <a href="Day12\todo.html">Write Code to create a TODO-Application and make sure data will retain.  </a><br><hr>
+    <a href="Day13\BOM.html">Assessment-13 [ Integrate Loader, Pop-up Window, InternetConnectivity ]</a><br><hr>
 </body>
 </html>
