--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
     <a href="Day-11\WhakeAMole.html"> Write JavaScript code to make Game in working Condition. </a><br><hr>
     <a href="Day12\todo.html">Write Code to create a TODO-Application and make sure data will retain.  </a><br><hr>
     <a href="Day13\BOM.html">Assessment-13 [ Integrate Loader, Pop-up Window, InternetConnectivity ]</a><br><hr>
+    <a href="Day14\covid.html">Create an Application displaying Covid Cases by fetching data using API</a><br><hr>
 </body>
 </html>
