--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     <a href="Day12\todo.html">Write Code to create a TODO-Application and make sure data will retain.  </a><br><hr>
     <a href="Day13\BOM.html">Assessment-13 [ Integrate Loader, Pop-up Window, InternetConnectivity ]</a><br><hr>
     <a href="Day-14\covid.html">Create an Application displaying Covid Cases by fetching data using API</a><br><hr>
+    <a href="Day-15/snakeGame.html">Create a Game using Canvas API.Use Multimedia in your Game</a><br><hr>
 </body>
 </html>
