--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
     <h1>Company name: Ingenuity Gaming</h1>
     <h1>Company Address: Ingenuity gaming,F-14, Shaheed captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh</h1>
     <h1>Official Email Address: ychoudhary@ingenuitygaming.com</h1><br><hr>
-    <a href="Day 2\Assignment2.html">Create a Tribute page with HTML Elements and style with CSS Properties. </a><br><hr>
-    <a href="Day 2\Assignment3.html">Create a Landing page with HTML Elements and style with CSS Properties. </a><br><hr>
-    <a href="Day 3\Photgraphy.html">Create a Single Page website with following Template.</a><br><hr>
-    <a href="Day 5\Assignment-5.html">Create a Car Animation (or Use your own creativity).</a><br><hr>
-    <a href="Day6\Javascript.html">Perform Javascript Assignments</a><br><hr>
-    <a href="Day7\sum.html">sum of numbers</a><br><hr>
-    <a href="Day7\information.html">Information About Me</a><br><hr>
-    <a href="Day7\Guess.html">Guess the number</a><br><hr>
-    <a href="Day-8\Assignment-1.html">Write code to remove extra white space in between the string</a><br><hr>
-    <a href="Day-8\Assignment-2.html">Write a code to Copy an array into another using forEach()</a><br><hr>
-    <a href="Day-8\Assignment-3.html">Write a code in JavaScript to Check all Students passed  (not passing elements one by one to function)</a><br><hr>
-    <a href="Day-8\Assignment-4.html">Write a code to add an Element at a particular List inside an array</a><br><hr>
-    <a href="Day-8\Assignment-5.html">Write a code to sort the string in descending order.</a><br><hr>
-    <a href="Day-9(Functions)\Assignment-1.html">Write a Program to return sum of all Arguments passed to a Function.
+    <a href="Day 2\Assignment2.html" target="_blank">Create a Tribute page with HTML Elements and style with CSS Properties.</a><br><hr>
+    <a href="Day 2\Assignment3.html" target="_blank">Create a Landing page with HTML Elements and style with CSS Properties. </a><br><hr>
+    <a href="Day 3\Photgraphy.html" target="_blank">Create a Single Page website with following Template.</a><br><hr>
+    <a href="Day 5\Assignment-5.html" target="_blank">Create a Car Animation (or Use your own creativity).</a><br><hr>
+    <a href="Day6\Javascript.html" target="_blank">Perform Javascript Assignments</a><br><hr>
+    <a href="Day7\sum.html" target="_blank">sum of numbers</a><br><hr>
+    <a href="Day7\information.html" target="_blank">Information About Me</a><br><hr>
+    <a href="Day7\Guess.html" target="_blank">Guess the number</a><br><hr>
+    <a href="Day-8\Assignment-1.html" target="_blank">Write code to remove extra white space in between the string</a><br><hr>
+    <a href="Day-8\Assignment-2.html" target="_blank">Write a code to Copy an array into another using forEach()</a><br><hr>
+    <a href="Day-8\Assignment-3.html" target="_blank">Write a code in JavaScript to Check all Students passed  (not passing elements one by one to function)</a><br><hr>
+    <a href="Day-8\Assignment-4.html" target="_blank">Write a code to add an Element at a particular List inside an array</a><br><hr>
+    <a href="Day-8\Assignment-5.html" target="_blank">Write a code to sort the string in descending order.</a><br><hr>
+    <a href="Day-9(Functions)\Assignment-1.html" target="_blank">Write a Program to return sum of all Arguments passed to a Function.
         1. console.log(add(2, 3));
         2. console.log(add(1, 2, 3, 4, 5));</a><br><hr>
-    <a href="Day-9(Functions)\Assignment-2.html">Write a Program to return more than one value from a Function.</a><br><hr>
-    <a href="Day-9(Functions)\Assignment-3.html">Write a code to return entire function definition and display it.</a><br><hr>
-    <a href="Day-9(Functions)\Assignment-4.html">Write a JavaScript program to create a new string adding "New!" in front of a given String. If the given string begins with "New!" already then return the original string. (Use Functional Approach)</a><br><hr>
-    <a href="Day-9(Functions)\Assignment-5.html"> Write a JavaScript program to create a new string from a given string taking first 3 characters and the last 3 characters of a string and add them together. The string length must be 3 or more. If not, return the original string is returned.  (Use Functional Approach)</a><br><hr>
-    <a href="Day-10\Assignment-1.html"> Write a Program to use call() and apply() Method.</a><br><hr>
-    <a href="Day-10\Assignment-2.html"> Write a Program to create an array having cube root of every element of another array.</a><br><hr>
-    <a href="Day-10\Assignment-3.html"> Write a Program to call a function in an interval of 3 sec for 5 times. (Use Functional Approach)</a><br><hr>
-    <a href="Day-10\Assignment-4.html">Write a Program to iterate an Array of Objects using map function.</a><br><hr>
-    <a href="Day-10\Assignment-5.html"> Write a Program to Filter out people whose age is less than 25 in descending order.    (Use Functional Approach)</a><br><hr>
-    <a href="Day-11\WhakeAMole.html"> Write JavaScript code to make Game in working Condition. </a><br><hr>
-    <a href="Day12\todo.html">Write Code to create a TODO-Application and make sure data will retain.  </a><br><hr>
-    <a href="Day13\BOM.html">Assessment-13 [ Integrate Loader, Pop-up Window, InternetConnectivity ]</a><br><hr>
-    <a href="Day-14\covid.html">Create an Application displaying Covid Cases by fetching data using API</a><br><hr>
-    <a href="Day-15/snakeGame.html">Create a Game using Canvas API.Use Multimedia in your Game</a><br><hr>
+    <a href="Day-9(Functions)\Assignment-2.html" target="_blank">Write a Program to return more than one value from a Function.</a><br><hr>
+    <a href="Day-9(Functions)\Assignment-3.html" target="_blank">Write a code to return entire function definition and display it.</a><br><hr>
+    <a href="Day-9(Functions)\Assignment-4.html" target="_blank">Write a JavaScript program to create a new string adding "New!" in front of a given String. If the given string begins with "New!" already then return the original string. (Use Functional Approach)</a><br><hr>
+    <a href="Day-9(Functions)\Assignment-5.html" target="_blank"> Write a JavaScript program to create a new string from a given string taking first 3 characters and the last 3 characters of a string and add them together. The string length must be 3 or more. If not, return the original string is returned.  (Use Functional Approach)</a><br><hr>
+    <a href="Day-10\Assignment-1.html" target="_blank"> Write a Program to use call() and apply() Method.</a><br><hr>
+    <a href="Day-10\Assignment-2.html" target="_blank"> Write a Program to create an array having cube root of every element of another array.</a><br><hr>
+    <a href="Day-10\Assignment-3.html" target="_blank"> Write a Program to call a function in an interval of 3 sec for 5 times. (Use Functional Approach)</a><br><hr>
+    <a href="Day-10\Assignment-4.html" target="_blank">Write a Program to iterate an Array of Objects using map function.</a><br><hr>
+    <a href="Day-10\Assignment-5.html" target="_blank"> Write a Program to Filter out people whose age is less than 25 in descending order.    (Use Functional Approach)</a><br><hr>
+    <a href="Day-11\WhakeAMole.html" target="_blank"> Write JavaScript code to make Game in working Condition. </a><br><hr>
+    <a href="Day12\todo.html" target="_blank">Write Code to create a TODO-Application and make sure data will retain.  </a><br><hr>
+    <a href="Day13\BOM.html" target="_blank">Assessment-13 [ Integrate Loader, Pop-up Window, InternetConnectivity ]</a><br><hr>
+    <a href="Day-14\covid.html" target="_blank">Create an Application displaying Covid Cases by fetching data using API</a><br><hr>
+    <a href="Day-15/snakeGame.html" target="_blank">Create a Game using Canvas API.Use Multimedia in your Game</a><br><hr>
 </body>
 </html>
