--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="Day-14\covid.html" target="_blank">Create an Application displaying Covid Cases by fetching data using API</a><br><hr>
     <a href="Day-15/snakeGame.html" target="_blank">Create a Game using Canvas API.Use Multimedia in your Game</a><br><hr>
     <a href="Day-16/mario.html" target="_blank">MARIO GAME</a><br><hr>
-    <a href="/Typescript/index.html" target="_blank">Typescript</a><br><hr>
+    <a href="/Typescript/index.html" target="_blank">Typescript Assignments</a><br><hr>
 </div>
 </body>
 </html>
