--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
     <br>
     <div id="main">
     <h3><a href="https://github.com/Yukti-04/IngenuityGaming1" target="_blank">My Github repository link</a></h3></marquee>
-    <h2>Assignment 1: Make your First Web Page Live. Instruction:- Page should container Your Name, Your Official Email and Your Company Name with Full Address. </h2>
-    <h1>Name: Yukti Choudhary</h1>
-    <h1>Company name: Ingenuity Gaming</h1>
-    <h1>Company Address: Ingenuity gaming,F-14, Shaheed captain Sameer Bhan Marg, F Block, Sector 8, Noida, Uttar Pradesh</h1>
-    <h1>Official Email Address: ychoudhary@ingenuitygaming.com</h1><br><hr>
+    <h1>Name: Yukti Choudhary</h1><br><hr>
     <a href="Day 2\Assignment2.html" target="_blank">Create a Tribute page with HTML Elements and style with CSS Properties.</a><br><hr>
     <a href="Day 2\Assignment3.html" target="_blank">Create a Landing page with HTML Elements and style with CSS Properties. </a><br><hr>
     <a href="Day 3\Photgraphy.html" target="_blank">Create a Single Page website with following Template.</a><br><hr>
